testsuite/tests/safeHaskell/unsafeLibs/BadImport01.stderr

BadImport01.hs:6:1: error: [GHC-44360]
    System.IO.Unsafe: Can't be safely imported!
    The module itself isn't safe.
